--- a/locales/da/translation.json
+++ b/locales/da/translation.json
@@ -1,4 +1,17 @@
 {
+	"confirm-dialog": {
+		"description": ""
+	},
+	"create": "Skab",
+	"create-failed": "Kunne ikke oprettes",
+	"create-success": "Oprettet med succes",
+	"delete": "",
+	"deleted": "",
+	"edit": "Redigere",
+	"err-loading-data": "Der opstod en fejl under indlæsning af data",
+	"err-reaching-web-server": "",
+	"error": "",
+	"failed": "Mislykkedes",
 	"feedback": "",
 	"help": "",
 	"home": "",
@@ -8,8 +21,49 @@
 	},
 	"mainLinks": "",
 	"new": "",
+	"no-data": "Ingen data",
 	"product": {
 		"title": ""
 	},
-	"subLinks": ""
+	"products": {
+		"category": "",
+		"category-description": "",
+		"category-placeholder": "",
+		"color": "",
+		"color-description": "",
+		"color-placeholder": "",
+		"create-new-products": "",
+		"delete-confirm-title": "",
+		"delete-failed": "",
+		"deleted-successfully": "",
+		"department": "",
+		"department-description": "",
+		"department-placeholder": "",
+		"description": "",
+		"description-description": "",
+		"description-placeholder": "",
+		"material": "",
+		"material-description": "",
+		"material-placeholder": "",
+		"page-title": "",
+		"price": "",
+		"price-description": "",
+		"price-placeholder": "",
+		"productName": "",
+		"productName-description": "",
+		"productName-filter": "",
+		"productName-placeholder": "",
+		"search-by-productName": "",
+		"size": "",
+		"size-description": "",
+		"size-placeholder": ""
+	},
+	"save": "",
+	"search": "",
+	"subLinks": "",
+	"success": "Succes",
+	"update": "Opdatering",
+	"update-failed": "Opdatering fejlede",
+	"update-success": "Opdateret med succes",
+	"view": "Udsigt"
 }
