--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,4 +1,17 @@
 {
+	"confirm-dialog": {
+		"description": "Are you sure you want to delete this element?"
+	},
+	"create": "Create",
+	"create-failed": "Failed to create",
+	"create-success": "Created successfully",
+	"delete": "Delete",
+	"deleted": "Deleted",
+	"edit": "Edit",
+	"err-loading-data": "Error occurred while loading data",
+	"err-reaching-web-server": "Unable to reach web server",
+	"error": "Error",
+	"failed": "Failed",
 	"feedback": "Feedback",
 	"help": "Help",
 	"home": "Home",
@@ -8,8 +21,49 @@
 	},
 	"mainLinks": "Main links",
 	"new": "New",
+	"no-data": "No data",
 	"product": {
 		"title": "Products"
 	},
-	"subLinks": "Sub links"
+	"products": {
+		"category": "Category",
+		"category-description": "Category",
+		"category-placeholder": "Category",
+		"color": "Color",
+		"color-description": "Color",
+		"color-placeholder": "Color",
+		"create-new-products": "Create new Products",
+		"delete-confirm-title": "Deleting Products : {{Name}}",
+		"delete-failed": "Can't delete the Products {{Name}}",
+		"deleted-successfully": "Products: {{Name}} deleted successfully",
+		"department": "Department",
+		"department-description": "Department",
+		"department-placeholder": "Department",
+		"description": "Description",
+		"description-description": "Description",
+		"description-placeholder": "Description",
+		"material": "Material",
+		"material-description": "Material",
+		"material-placeholder": "Material",
+		"page-title": "Products",
+		"price": "Price",
+		"price-description": "Price",
+		"price-placeholder": "Price",
+		"productName": "Product Name",
+		"productName-description": "Product Name",
+		"productName-filter": "Search by Product Name",
+		"productName-placeholder": "Product Name",
+		"search-by-productName": "",
+		"size": "Size",
+		"size-description": "Size",
+		"size-placeholder": "Size"
+	},
+	"save": "Save",
+	"search": "Search",
+	"subLinks": "Sub links",
+	"success": "Success",
+	"update": "Update",
+	"update-failed": "Update failed",
+	"update-success": "Updated successfully",
+	"view": "View"
 }
