tamil language included

--- a/locales/da/translation.json
+++ b/locales/da/translation.json
@@ -1,87 +1,88 @@
 {
 	"advancedQuery": {
-		"advanced-query": "",
-		"clik-search": ""
+		"advanced-query": "Avanceret forespørgsel",
+		"clik-search": "Klik på søg for at anvende filteret"
 	},
 	"another": {
-		"address": "",
-		"page-title": ""
+		"address": "Adresse",
+		"page-title": "En anden"
 	},
 	"audit-history": {
-		"action-at": "",
-		"action-by": "",
+		"action-at": "Handling kl.",
+		"action-by": "Handling af",
 		"audit-history-records": "Revisionshistorik",
-		"created-at": "",
-		"title": ""
+		"created-at": "Oprettet kl",
+		"title": "Revisionshistorik"
 	},
 	"confirm-dialog": {
-		"description": ""
+		"description": "Er du sikker på, at du vil slette dette element?"
 	},
 	"create": "Skab",
 	"create-failed": "Kunne ikke oprettes",
 	"create-success": "Oprettet med succes",
-	"delete": "",
-	"deleted": "",
+	"delete": "Slet",
+	"deleted": "Slettet",
 	"edit": "Redigere",
 	"err-loading-data": "Der opstod en fejl under indlæsning af data",
-	"err-reaching-web-server": "",
-	"error": "",
+	"err-reaching-web-server": "Kan ikke nå webserveren",
+	"error": "Fejl",
 	"failed": "Mislykkedes",
-	"feedback": "",
-	"help": "",
-	"home": "",
-	"include-deleted-records": "",
+	"feedback": "Feedback",
+	"help": "Hjælp",
+	"home": "Hjem",
+	"include-deleted-records": "Inkluder slettede poster",
 	"language": {
 		"danish": "Dansk",
-		"english": "Engelsk"
+		"english": "Engelsk",
+		"tamil": "Tamil"
 	},
-	"mainLinks": "",
-	"new": "",
+	"mainLinks": "Hovedlinks",
+	"new": "Ny",
 	"no-data": "Ingen data",
 	"pagination": {
-		"page-n-of-total": "",
-		"result-per-page": "",
-		"total-result": ""
+		"page-n-of-total": "Side {{currentPage}} af {{totalPage}}",
+		"result-per-page": "Resultat pr. side",
+		"total-result": "Samlet resultat"
 	},
-	"product-description": "",
+	"product-description": "Opret Læs Opdateret Slet",
 	"products": {
-		"category": "",
-		"category-description": "",
-		"category-placeholder": "",
-		"color": "",
-		"color-description": "",
-		"color-placeholder": "",
-		"create-new-products": "",
-		"delete-confirm-title": "",
-		"delete-failed": "",
-		"deleted-successfully": "",
-		"department": "",
-		"department-description": "",
-		"department-placeholder": "",
-		"description": "",
-		"description-description": "",
-		"description-placeholder": "",
-		"material": "",
-		"material-description": "",
-		"material-placeholder": "",
-		"page-title": "",
-		"price": "",
-		"price-description": "",
-		"price-placeholder": "",
-		"productName": "",
-		"productName-description": "",
-		"productName-filter": "",
-		"productName-placeholder": "",
+		"category": "Kategori",
+		"category-description": "Kategori",
+		"category-placeholder": "Kategori",
+		"color": "Farve",
+		"color-description": "Farve",
+		"color-placeholder": "Farve",
+		"create-new-products": "Opret nye produkter",
+		"delete-confirm-title": "Sletter produkter: {{Name}}",
+		"delete-failed": "Kan ikke slette produkterne {{Name}}",
+		"deleted-successfully": "Produkter: {{Name}} er slettet",
+		"department": "Afdeling",
+		"department-description": "Afdeling",
+		"department-placeholder": "Afdeling",
+		"description": "Beskrivelse",
+		"description-description": "Beskrivelse",
+		"description-placeholder": "Beskrivelse",
+		"material": "Materiale",
+		"material-description": "Materiale",
+		"material-placeholder": "Materiale",
+		"page-title": "Produkter",
+		"price": "Pris",
+		"price-description": "Pris",
+		"price-placeholder": "Pris",
+		"productName": "Produktnavn",
+		"productName-description": "Produktnavn",
+		"productName-filter": "Søg efter produktnavn",
+		"productName-placeholder": "Produktnavn",
 		"search-by-productName": "",
-		"select-placeholder": "",
-		"size": "",
-		"size-description": "",
-		"size-placeholder": ""
+		"select-placeholder": "Vælg produkter",
+		"size": "Størrelse",
+		"size-description": "Størrelse",
+		"size-placeholder": "Størrelse"
 	},
-	"save": "",
-	"search": "",
-	"subLinks": "",
-	"submit": "",
+	"save": "Gemme",
+	"search": "Søg",
+	"subLinks": "Underlinks",
+	"submit": "Indsend",
 	"success": "Succes",
 	"update": "Opdatering",
 	"update-failed": "Opdatering fejlede",
