--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -33,7 +33,8 @@
 	"include-deleted-records": "Include deleted records",
 	"language": {
 		"danish": "Danish",
-		"english": "English"
+		"english": "English",
+		"tamil": "Tamil"
 	},
 	"mainLinks": "Main links",
 	"new": "New",
